fix: override for anchors inside warning banner to be darker blue for contrast

--- a/src/components/banner/banner.module.css
+++ b/src/components/banner/banner.module.css
@@ -36,3 +36,8 @@
 .warning .children {
   color: var(--figma-color-text-onwarning);
 }
+
+/* Link component does not have enough contrast on our warning bg */
+:global(.banner.warning a) {
+  color: var(--figma-color-bg-brand-tertiary);
+}
